# bomberman

./: CMakeLists.txt  README.md  protocol.h
client/: main.cpp
common/: protocol.h  reader.c  reader.h  utils.h
server/: broadcast.c  broadcast.h  game.c  game.h  main.c  player.c  player.h  setup.c
src/client/: draw.cpp  main.cpp  packet.c  state.c
src/client/include/: draw.hpp  packet.h  state.h
src/common/: reader.c  utils.c
src/common/include/: protocol.h  utils.h
src/server/: game.c  main.c  object.c  packet.c  player.c  setup.c
src/server/include/: game.h  object.h  packet.h  player.h  setup.h
